@@ -1,4 +1,5 @@
 v0.10
+	* ADD : navigation: view -> bookmark + add/remove
 	* FIX : warn when OSM userid/password not set
 	* ADD : Export viewport to OSM
 	* FIX : crash when splitting roads (by Daniel van Gerpen)
